--- a/switch/curl/PKGBUILD
+++ b/switch/curl/PKGBUILD
@@ -1,44 +1,38 @@
 
 # Maintainer: WinterMute <davem@devkitpro.org>
 pkgname=switch-curl
-pkgver=7.69.1
-pkgrel=5
-pkgdesc='An URL retrieval utility and library'
+pkgver=7.59.0
+pkgrel=1
+pkgdesc='Deflate compression method library (for Nintendo Switch homebrew development)'
 arch=('any')
 url='http://www.zlib.net/'
 license=('zlib')
 options=(!strip libtool staticlibs)
-depends=('switch-zlib' 'libnx')
-makedepends=('switch-pkg-config' 'dkp-toolchain-vars')
-source=(
-    "https://curl.haxx.se/download/curl-${pkgver}.tar.xz"
-    'switch-curl.patch'
-)
+depends=('switch-zlib' 'switch-mbedtls')
+makedepends=('switch-pkg-config' 'devkitpro-pkgbuild-helpers')
+source=("https://curl.haxx.se/download/curl-${pkgver}.tar.gz")
 groups=('switch-portlibs')
 
-sha256sums=(
- '03c7d5e6697f7b7e40ada1b2256e565a555657398e6c1fcfa4cb251ccd819d4f'
- '723c7d884fc7c39ae1a3115ba245bb8c1415da47bbd60ab8f943ca98f92ebc9a'
+sha256sums=( '099d9c32dc7b8958ca592597c9fabccdf4c08cfb7c114ff1afbbc4c6f13c9e9e'
 )
 
 build() {
   cd curl-$pkgver
 
-  patch -Np1 -i $srcdir/switch-curl.patch
-
+  source /opt/devkitpro/devkita64.sh
   source /opt/devkitpro/switchvars.sh
-  LDFLAGS="-specs=${DEVKITPRO}/libnx/switch.specs ${LDFLAGS}"
-
-  ./buildconf
+  
+  patch -p1 -i ../../smb.patch
+  patch -p1 -i ../../smb_h.patch
 
   ./configure --prefix=$PORTLIBS_PREFIX --host=aarch64-none-elf \
     --disable-shared --enable-static --disable-ipv6 --disable-unix-sockets \
     --disable-manual --disable-ntlm-wb --disable-threaded-resolver \
-    --without-ssl --without-polar-ssl --without-cyassl --without-wolfssl \
-    --without-mbedtls \
-    --with-libnx \
-    --with-default-ssl-backend=libnx
+	--without-ssl --with-mbedtls --with-libssh2 \
+	LIBS="$LIBS -lmbedtls -lmbedx509 -lmbedcrypto" CFLAGS="$CFLAGS $CPPFLAGS -I/opt/devkitpro/libnx/include/"
 
+  patch -p1 -i ../../curl_config.patch
+  
   make -C lib
   
 }
@@ -46,10 +40,10 @@ build() {
 package() {
   cd curl-$pkgver
 
+  source /opt/devkitpro/devkita64.sh
   source /opt/devkitpro/switchvars.sh
 
   make DESTDIR="$pkgdir" -C lib install
   make DESTDIR="$pkgdir" -C include install
-  make DESTDIR="$pkgdir" install-binSCRIPTS install-pkgconfigDATA
 
 }
